--- a/MyTabLayout_find_20171004/app/src/main/AndroidManifest.xml
+++ b/MyTabLayout_find_20171004/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,5 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EstimationActivity"
+            android:label="@string/title_activity_estimation"
+            android:theme="@style/AppTheme"></activity>
     </application>
+
 </manifest>
