--- a/MyTabLayout_find_20171004/app/build.gradle
+++ b/MyTabLayout_find_20171004/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
